--- a/changes/ee/fix-10324.en.md
+++ b/changes/ee/fix-10324.en.md
@@ -1,1 +1,1 @@
-When pressing reconnect on a badly configured Clickhouse bridge in the dashboard, no error message was shown, but this is now fixed.
+Previously, when attempting to reconnect to a misconfigured Clickhouse bridge through the dashboard, users would not receive an error message. This issue is now resolved, and error messages will now be displayed.
